4.2.3 / 2015-04-30
 * Application always downloads password expiration information regardless on
   the login method type.
 * Improved notifications when searching for data boxes.
 * Fixed bug. The displayed attachment size occasionally differed by 2 bytes
   from real size.
 * Fixed some issues when searching for data boxes.
 * Fixed some issues with path remembering.
 * Fixed a bug causing the application to display 'Synchronising accounts' in
   status bar although there was no account to synchronise.
 * Fixed bug causing the synchronisation timer to stop after a manual account
   synchronisation.
 * Fixed application crash when creating a new certificate+password account.
 * Removed warning when using password without expiration.
 * Fixed SMS authentication failure.

4.2.2 / 2015-04-08
 * The user is notified after his password expired and that he must change it
   in the ISDS web interface.
 * Fixed error. An error dialogue was generated when searching for data boxes.
   A notification about too many results was added.
 * Save all attachments button can be configured (in options) so that it also
   saves message envelope and delivery info in PDF.

4.2.1 / 2015-04-02
 * Fixed a bug. Datovka adds a primary key entry into process_state table if
   this entry is missing.

4.2.0 / 2015-03-31
 * Fixed bug. Account password was saved to the configuration regardless on
   the 'Don't save password' option.
 * Updated reference to new Datovka 4 web page.
 * The application can to a reduced extent use a no longer active account.
   Messages stored in a no longer working account can still be accessed from
   inside the application.
 * Application generates a dialogue notifying the user about an expiring
   password 7 days before the expiration deadline.
 * User can log into ISDS using a user certificate in P12 or PEM format.
 * Changed QString to char* conversion so that it no longer uses the
   conversion to ::std::string as this functionality may not be available in